tests/neg/i16920.check
-- [E008] Not Found Error: tests/neg/i16920.scala:19:11 ----------------------------------------------------------------
19 |    "five".wow // error
   |    ^^^^^^^^^^
   |    value wow is not a member of String.
   |    An extension method was tried, but could not be fully constructed:
   |
   |        Two.wow("five")
   |
   |        failed with:
   |
   |            Found:    ("five" : String)
   |            Required: Int
-- [E008] Not Found Error: tests/neg/i16920.scala:27:6 -----------------------------------------------------------------
27 |    5.wow // error
   |    ^^^^^
   |    value wow is not a member of Int.
   |    An extension method was tried, but could not be fully constructed:
   |
   |        AlsoFails.wow(5)
   |
   |        failed with:
   |
   |            Found:    (5 : Int)
   |            Required: Boolean
-- [E008] Not Found Error: tests/neg/i16920.scala:28:11 ----------------------------------------------------------------
28 |    "five".wow // error
   |    ^^^^^^^^^^
   |    value wow is not a member of String.
   |    An extension method was tried, but could not be fully constructed:
   |
   |        AlsoFails.wow("five")
   |
   |        failed with:
   |
   |            Found:    ("five" : String)
   |            Required: Boolean
-- [E008] Not Found Error: tests/neg/i16920.scala:35:6 -----------------------------------------------------------------
35 |    5.wow // error
   |    ^^^^^
   |    value wow is not a member of Int.
   |    An extension method was tried, but could not be fully constructed:
   |
   |        Three.wow(5)
   |
   |        failed with:
   |
   |            Ambiguous extension methods:
   |            both Three.wow(5)
   |            and  Two.wow(5)
   |            are possible expansions of 5.wow
-- [E008] Not Found Error: tests/neg/i16920.scala:43:11 ----------------------------------------------------------------
43 |    "five".wow // error
   |    ^^^^^^^^^^
   |    value wow is not a member of String.
   |    An extension method was tried, but could not be fully constructed:
   |
   |        Two.wow("five")
   |
   |        failed with:
   |
   |            Found:    ("five" : String)
   |            Required: Int
-- [E008] Not Found Error: tests/neg/i16920.scala:50:11 ----------------------------------------------------------------
50 |    "five".wow // error
   |    ^^^^^^^^^^
   |    value wow is not a member of String.
   |    An extension method was tried, but could not be fully constructed:
   |
   |        Two.wow("five")
   |
   |        failed with:
   |
   |            Found:    ("five" : String)
   |            Required: Int
-- [E008] Not Found Error: tests/neg/i16920.scala:57:6 -----------------------------------------------------------------
57 |    5.wow // error
   |    ^^^^^
   |    value wow is not a member of Int.
   |    An extension method was tried, but could not be fully constructed:
   |
   |        Three.wow(5)
   |
   |        failed with:
   |
   |            Ambiguous extension methods:
   |            both Three.wow(5)
   |            and  Two.wow(5)
   |            are possible expansions of 5.wow
